--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
   <version>1.1</version>
 
   <scm>
-    <connection>scm:git:git://github.com/hohl/myresidence.git</connection>
-    <url>https://github.com/hohl/myresidence</url>
+    <connection>scm:git:git://github.com/hohl/Register.git</connection>
+    <url>https://github.com/hohl/Register</url>
   </scm>
 
   <repositories>
+    <!-- Bukkit Repository -->
     <repository>
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/artifactory/repo</url>
