--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+    <classpathentry kind="lib" path="lib/bukkit.jar"/>
 	<classpathentry kind="lib" path="lib/BOSEconomy7.jar"/>
 	<classpathentry kind="lib" path="lib/Essentials.jar"/>
 	<classpathentry kind="lib" path="lib/iCo6.jar"/>
@@ -8,6 +9,5 @@
 	<classpathentry kind="lib" path="lib/iCo4.jar"/>
 	<classpathentry kind="lib" path="lib/MultiCurrency.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/Fox/Documents/Register/lib/bukkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
