--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,9 +1,8 @@
 name: Register
-version: 1.3
+version: 1.5
 main: com.nijikokun.register.Register
 description: >
-             This is an implementation of Nijikokun's Register
-             designed for easy hooking by LRFLEW
+             Register, an API built for economies.
 authors: [Nijikokun, LRFLEW, Acrobot, miho, Snowleo, KHobbits, Spice-King]
-website: http://forums.bukkit.org/threads/16849/
+website: http://dev.bukkit.org/server-mods/register
 softdepend: [iConomy, BOSEconomy, Currency, MultiCurrency]
